REFACTOR: Swagger